# esp-idf_root_project

./: .gitignore  CMakeLists.txt  README.md  partitions_esp32c3_16MB.csv  sdkconfig_esp32_2MB.defaults
fma_components/fma_gpio/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
fma_components/fma_gpio/include/: fma_gpio.h
fma_components/fma_gpio/src/: fma_gpio.c
fma_components/fma_lvgl/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
fma_components/fma_lvgl/include/: fma_lvgl_lilygo.h
fma_components/fma_lvgl/src/: fma_lvgl_lilygo.c
fma_components/fma_lvgl/ui/: images.c  images.h  screens.c  screens.h  ui.c  ui_image_halo.c  ui_image_link_zelda.c  ui_image_mario.c  ui_image_test.c  vars.h
fma_components/fma_nimble_server/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
fma_components/fma_nimble_server/include/: common.h  fma_nimble_server.h  gatt_svc.h
fma_components/fma_nimble_server/src/: fma_nimble_server.c  gap.c  gatt_svc.c
main/: CMakeLists.txt  idf_component.yml  main.c
main/ui/: images.h  screens.c  screens.h
